--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   },
   "homepage": "https://github.com/erykpiast/ractivejs-refluxjs-todomvc",
   "devDependencies": {
-    "brfs": "^1.2.0",
+    "brfs": "~1.2",
     "grunt": "~0.4",
     "grunt-browserify": "~3.0",
     "grunt-contrib-clean": "~0.5",
@@ -31,6 +31,7 @@
     "grunt-contrib-jshint": "~0.10",
     "grunt-contrib-uglify": "~0.5",
     "grunt-contrib-watch": "~0.6",
+    "grunt-gh-pages": "~0.9",
     "grunt-http-server": "latest",
     "grunt-karma": "~0.8",
     "jshint": "~2.5",
